2001-05-04  Robin * Slomkowski  <rslomkow@rslomkow.org>

	* configure.in: upped version required of eel to 1.0 and
	  librsvg to 1.0.0

2001-05-04  Robin * Slomkowski  <rslomkow@rslomkow.org>

	* configure.in: upped versions required, medusa >= 0.5.1
	  ammonite >= 1.0.2, gnome-vfs >= 1.0.1

2001-05-04  Robin * Slomkowski  <rslomkow@rslomkow.org>

	* configure.in: requires eel 0.1

2001-05-04  Ramiro Estrugo  <ramiro@eazel.com>

	* configure.in:
	No need to set gconf flags here since eel will have already done so.
	
	* nautilus.spec.in:
	Change the BuildRequires entries for eel and librsvg to be
	eel-devel and librsvg-devel.
	
	* libnautilus-private/nautilus-dateedit-extensions.c:
	* libnautilus-private/nautilus-dateedit-extensions.h:
	* libnautilus-private/nautilus-generous-bin.c:
	* libnautilus-private/nautilus-generous-bin.h:
	* libnautilus-private/nautilus-gconf-extensions.c:
	* libnautilus-private/nautilus-gconf-extensions.h:
	* libnautilus-private/nautilus-preferences-box.c:
	* libnautilus-private/nautilus-preferences-box.h:
	* libnautilus-private/nautilus-preferences-group.c:
	* libnautilus-private/nautilus-preferences-group.h:
	* libnautilus-private/nautilus-preferences-item.c:
	* libnautilus-private/nautilus-preferences-item.h:
	* libnautilus-private/nautilus-preferences-pane.c:
	* libnautilus-private/nautilus-preferences-pane.h:
	* libnautilus-private/nautilus-preferences.c:
	* libnautilus-private/nautilus-preferences.h:
	Moved to Eel.
	
	* applets/preferences-applet/nautilus-preferences-applet.c:
	* components/adapter/nautilus-adapter.c:
	* components/news/nautilus-news.c:
	* components/text/nautilus-text-view.c:
	* components/throbber/nautilus-throbber.c:
	* components/tree/nautilus-tree-expansion-state.c:
	* components/tree/nautilus-tree-view.c:
	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-directory-async.c:
	* libnautilus-private/nautilus-directory-background.c:
	* libnautilus-private/nautilus-directory.c: